--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 
 @font-face {
      font-family: 'Roboto';
-     src: url('../fonts/Roboto/RobotoSlab-Bold.ttf');
+     src: url('RobotoSlab-Bold.ttf');
 }
 
 @font-face{
    font-family:'Roboto';
-     src: url('../fonts/Roboto/Roboto-Bold.ttf');
+     src: url('Roboto-Bold.ttf');
      font-weight: bold; 
     }
 
@@ -56,7 +56,7 @@ nav a{
 }
 
 #principal {
-    background-image: url("../img/08.jpg");
+    background-image: url("08.jpg");
     background-size: cover;
     background-position: top;
     color: #FFF;
